Archive2/bd/17835ea5d27b1c/output
main.cpp:7:37: error: control reaches end of non-void function [-Werror,-Wreturn-type]
    virtual std::string myString() {}
                                    ^
1 error generated.
